infra/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      #This annotation is required for linkerd to know the cpu request.
      annotations:
        config.linkerd.io/proxy-cpu-request: "0.3"
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: besamly2018/rpc-server
          command: ["npm", "run", "start"]
          resources:
            requests:
              cpu: "300m"
              memory: "50Mi"
            limits:
              cpu: "300m"
              memory: "300Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 50051
      targetPort: 50051
